--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="game.css?v=1.1.5">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500&display=swap" rel="stylesheet">
-  <title>Gorilla Adventure</title>
+  <title>Geometry Dash</title>
   <style type="text/css">
     .jss1:before {
       top: 0;
@@ -26,7 +26,6 @@
 </head>
 
 <body>
-<a href="https://gorillaadventure.io/" class="info" target="_blank"><span class="svg-icon " aria-hidden="true"><svg class="svg-icon__link"><use xlink:href="#icon-info"></use></svg></span></a>
 <div id="gameContainer" style="display: none;">
 	<canvas id="#canvas"></canvas> 
 </div>
@@ -80,15 +79,15 @@
 </svg>
 </body>
 	<script>
-		var buildUrl = "./Build_gorilla_adventure";
-		var loaderUrl = buildUrl + "/gorilla-adventure.loader.js";
+		var buildUrl = "./Build_v3";
+		var loaderUrl = buildUrl + "/geometry-lite-v3.loader.js";
 		var config = {
-		dataUrl: buildUrl + "/gorilla-adventure.data.unityweb",
-		frameworkUrl: buildUrl + "/gorilla-adventure.framework.js.unityweb",
-		codeUrl: buildUrl + "/gorilla-adventure.wasm.unityweb",
+		dataUrl: buildUrl + "/geometry-lite-v3.data.unityweb",
+		frameworkUrl: buildUrl + "/geometry-lite-v3.framework.js.unityweb",
+		codeUrl: buildUrl + "/geometry-lite-v3.wasm.unityweb",
 				streamingAssetsUrl: "StreamingAssets",
-		companyName: "1games.io",
-		productName: "Gorilla Adventure",
+		companyName: "a.io",
+		productName: "Geometry Dash",
 		productVersion: "1.4",
 		};
 
