--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
       <div class="jss32">
         <div class="jss31 jss34 jss39 jss50 gameloader">
           <div class="jss32">
-            <div class="gameloader-game-name">Gorilla Adventure</div>
+            <div class="gameloader-game-name">Geometry Dash</div>
           </div>
           <div class="jss32">
             <div class="jss32 gameloader-logo">
-              <img id="game-logo" src="background.png">
+              <img id="game-logo" src=".png">
             </div>
           </div>
           <div class="jss32">
@@ -79,12 +79,12 @@
 </svg>
 </body>
 	<script>
-		var buildUrl = "./Build_v3";
-		var loaderUrl = buildUrl + "/geometry-lite-v3.loader.js";
+		var buildUrl = "./Build_v2";
+		var loaderUrl = buildUrl + "/geometry-lite-v2.loader.js";
 		var config = {
-		dataUrl: buildUrl + "/geometry-lite-v3.data.unityweb",
-		frameworkUrl: buildUrl + "/geometry-lite-v3.framework.js.unityweb",
-		codeUrl: buildUrl + "/geometry-lite-v3.wasm.unityweb",
+		dataUrl: buildUrl + "/geometry-lite-v2.data.unityweb",
+		frameworkUrl: buildUrl + "/geometry-lite-v2.framework.js.unityweb",
+		codeUrl: buildUrl + "/geometry-lite-v2.wasm.unityweb",
 				streamingAssetsUrl: "StreamingAssets",
 		companyName: "a.io",
 		productName: "Geometry Dash",
